[gd_scene load_steps=6 format=3 uid="uid://b68oyfqfam51r"]

[ext_resource type="Theme" uid="uid://de8o8117a6fjq" path="res://Art/default.tres" id="1_rb6lg"]
[ext_resource type="Script" uid="uid://bdeg0y8ympdc" path="res://Scripts/pause_menu.gd" id="2_f03wv"]
[ext_resource type="FontFile" uid="uid://behmabh2blwnj" path="res://Fonts/data-latin.ttf" id="3_my5lp"]
[ext_resource type="Texture2D" uid="uid://b175wyo8a24j2" path="res://Art/fox.png" id="4_dkss2"]

[sub_resource type="LabelSettings" id="LabelSettings_dkss2"]
font_size = 30

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rb6lg")
script = ExtResource("2_f03wv")

[node name="Panel" type="Panel" parent="."]
z_index = -1
layout_mode = 0
offset_left = 408.0
offset_top = 96.0
offset_right = 758.0
offset_bottom = 546.0
mouse_filter = 2
theme = ExtResource("1_rb6lg")

[node name="Background" type="ColorRect" parent="."]
z_index = -2
layout_mode = 0
offset_right = 1200.0
offset_bottom = 650.0
color = Color(0, 0, 0, 1)

[node name="Settings" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
offset_left = 433.0
offset_top = 121.0
offset_right = 733.0
offset_bottom = 272.0
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Sound" type="HBoxContainer" parent="Settings"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Settings/Sound"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "SOUND     "

[node name="HSlider" type="HSlider" parent="Settings/Sound"]
custom_minimum_size = Vector2(155, 60)
layout_mode = 2
max_value = 10.0
value = 10.0
ticks_on_borders = true

[node name="RotateCamera" type="HBoxContainer" parent="Settings"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Settings/RotateCamera"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Rotate Camera          "

[node name="CheckBox" type="CheckBox" parent="Settings/RotateCamera"]
layout_mode = 2

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 433.0
offset_top = 375.0
offset_right = 733.0
offset_bottom = 526.0
size_flags_horizontal = 3
theme_override_constants/separation = 14

[node name="Play" type="Button" parent="Buttons"]
z_index = 2
layout_mode = 2
theme_override_fonts/font = ExtResource("3_my5lp")
theme_override_font_sizes/font_size = 50
text = "PLAY"

[node name="Exit" type="Button" parent="Buttons"]
z_index = 2
layout_mode = 2
theme_override_fonts/font = ExtResource("3_my5lp")
theme_override_font_sizes/font_size = 50
text = "MENU"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 486.0
offset_top = 155.0
offset_right = 685.0
offset_bottom = 361.0
texture = ExtResource("4_dkss2")
expand_mode = 1

[node name="Title" type="Label" parent="."]
layout_mode = 2
offset_left = 433.0
offset_top = 121.0
offset_right = 733.0
offset_bottom = 156.0
size_flags_vertical = 1
theme = ExtResource("1_rb6lg")
text = "pause"
label_settings = SubResource("LabelSettings_dkss2")
horizontal_alignment = 1

[connection signal="drag_ended" from="Settings/Sound/HSlider" to="." method="_on_sound_drag_ended"]
[connection signal="toggled" from="Settings/RotateCamera/CheckBox" to="." method="_on_rotate_camera_toggled"]
[connection signal="pressed" from="Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_exit_pressed"]
